<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:background="@drawable/bg" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_ng_60"
        android:text="@string/add_new_donor"
        android:textColor="@color/red"
        android:textStyle="bold|italic"
        android:textSize="@dimen/text_size_25"
        android:id="@+id/textView" />


        <TextView
        android:id="@+id/tv_mobile"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_20"
        android:text="@string/mobile"/>
    
        <EditText
        android:id="@+id/et_mobile"
        android:layout_height="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_toRightOf="@id/tv_mobile"
        android:layout_alignTop="@id/tv_mobile"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:inputType="phone"
        android:background="@color/light"/>
        
    
    <TextView 
        android:id="@+id/tv_name"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@id/tv_mobile"
        android:layout_alignRight="@id/tv_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_20"
        android:text="@string/name"/>
    
    <EditText
        android:id="@+id/et_name"
        android:layout_height="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_toRightOf="@id/tv_name"
        android:layout_alignTop="@id/tv_name"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:inputType="text"
        android:background="@color/light"/>
    
    <TextView 
        android:id="@+id/tv_blood_group"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@id/tv_name"
        android:layout_alignRight="@id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_15"
        android:text="@string/blood_group"/>
    
     <Spinner
        android:id="@+id/sp_blood_group"
        android:layout_height="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_toRightOf="@id/tv_blood_group"
        android:layout_alignTop="@id/tv_blood_group"
        android:entries="@array/blood_groups"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@color/light" />
    
    <TextView 
        android:id="@+id/tv_last_donation_date"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/tv_blood_group"
        android:layout_alignRight="@id/tv_blood_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_12"
        android:text="@string/last_donation_date"/>
    
    <EditText
        android:id="@+id/et_last_donation_date"
        android:layout_height="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_toRightOf="@id/tv_last_donation_date"
        android:layout_alignTop="@id/tv_last_donation_date"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@color/light"/>
    
    <TextView 
        android:id="@+id/tv_no_of_donation"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_below="@id/tv_last_donation_date"
        android:layout_alignRight="@id/tv_last_donation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_12"
        android:text="@string/no_of_donation"/>
    
    <EditText
        android:id="@+id/et_no_of_donation"
        android:layout_height="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_toRightOf="@id/tv_no_of_donation"
        android:layout_alignTop="@id/tv_no_of_donation"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:inputType="number"
        android:background="@color/light"/>
    
        <Button
        android:id="@+id/btn_add"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_30"
        android:layout_alignLeft="@id/et_no_of_donation"
        android:layout_below="@id/et_no_of_donation"
        android:clickable="true"
        android:layout_marginTop="@dimen/dp_30"
        android:paddingRight="@dimen/dp_50"
        android:background="@drawable/submit_btn_image_selector"
        android:text="@string/add_donor"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_12"
        android:paddingLeft="@dimen/dp_20"
        android:layout_alignRight="@+id/textView" />

</RelativeLayout>
